# amr_simulation

./: README.md  docker-compose.yml
documents/: PRESENTATION.html  PRESENTATION.md
src/inspection_manager/: README.md  package.xml  setup.cfg  setup.py
src/inspection_manager/config/: trucks.yaml
src/inspection_manager/config/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/inspection_manager/config/log/: latest_build
src/inspection_manager/inspection_manager/: __init__.py  inspection_manager_node.py
src/inspection_manager/launch/: inspection_manager.launch.py
src/inspection_manager/resource/: inspection_manager
src/segment_3d/: README.md
src/segment_3d/segmentation_3d/: CMakeLists.txt  package.xml
src/segment_3d/segmentation_3d/config/: config.yaml
src/segment_3d/segmentation_3d/include/segmentation_3d/: segmentation_processor.h
src/segment_3d/segmentation_3d/launch/: segment_3d.launch.py
src/segment_3d/segmentation_3d/scripts/: ultralytics_node.py
src/segment_3d/segmentation_3d/src/: point_processor.cpp  segmentation_processor.cpp
src/segment_3d/segmentation_msgs/: CMakeLists.txt  package.xml
src/segment_3d/segmentation_msgs/msg/: ObjectSegment.msg  ObjectsSegment.msg
src/ugv_gazebo/: CMakeLists.txt
src/ugv_gazebo/launch/bringup/: bringup.launch.py  bringup.launch_0.tar.xz  bringup_test.launch.py  spawn_ugv.launch.py
src/ugv_gazebo/models/ugv_rover/: model.sdf  model_3d_lidar.tar.xz  model_old.tar.xz
src/ugv_gazebo/models/world/: ugv_world.world
src/ugv_gazebo/param/: slam_nav.yaml
src/ugv_gazebo/worlds/: myworld2.world  myworld3.world
