cmake_minimum_required(VERSION 3.8)
project(segmentation_3d)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(gb_visual_detection_3d_msgs REQUIRED)
find_package(pcl_conversions REQUIRED)
find_package(pcl_ros REQUIRED)
find_package(rclcpp REQUIRED)
find_package(segmentation_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)
find_package(tf2_sensor_msgs REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(message_filters REQUIRED)
find_package(visualization_msgs REQUIRED)
find_package(PCL REQUIRED)

include_directories(
  include/${PROJECT_NAME}/
)

# Declare a C++ executable
add_executable(segmentation_processor_node
  src/segmentation_processor.cpp
  src/point_processor.cpp
)

ament_target_dependencies(segmentation_processor_node
  gb_visual_detection_3d_msgs
  pcl_conversions
  pcl_ros
  rclcpp
  segmentation_msgs
  sensor_msgs
  std_msgs
  tf2_geometry_msgs
  tf2_ros
  message_filters
  visualization_msgs
  tf2_sensor_msgs
  PCL
)

# Install targets
install(TARGETS segmentation_processor_node
  DESTINATION lib/${PROJECT_NAME}
)

# Install Python executable
install(PROGRAMS
  scripts/ultralytics_node.py
  DESTINATION lib/${PROJECT_NAME}
  RENAME ultralytics_node
)

# Install header files
install(DIRECTORY include/${PROJECT_NAME}/
  DESTINATION include
)

# Install launch files
install(DIRECTORY launch/
  DESTINATION share/${PROJECT_NAME}/launch
  PATTERN "*.launch" EXCLUDE
)

# Install config files
install(DIRECTORY config/
  DESTINATION share/${PROJECT_NAME}/config
)

ament_package()
